src/test/ui/const-generics/generic_const_exprs/closures.stderr
error: overly complex generic constant
  --> $DIR/closures.rs:3:35
   |
LL | fn test<const N: usize>() -> [u8; N + (|| 42)()] {}
   |                                   ^^^^-------^^
   |                                       |
   |                                       borrowing is not supported in generic constants
   |
   = help: consider moving this anonymous constant into a `const` function
   = note: this operation may be supported in the future

error: aborting due to previous error

